RESOLVED FIXED 257522
The caret color is sometimes incorrect when specifying `caret-color: auto`
https://bugs.webkit.org/show_bug.cgi?id=257522
Summary The caret color is sometimes incorrect when specifying `caret-color: auto`
Richard Robinson
Reported 2023-05-30 20:24:33 PDT
Attachments
Richard Robinson
Comment 1 2023-05-30 20:34:08 PDT
EWS
Comment 2 2023-06-01 17:20:28 PDT
Committed 264818@main (e43eec01111f): <https://commits.webkit.org/264818@main> Reviewed commits have been landed. Closing PR #14522 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.