The caret color is sometimes incorrect when specifying `caret-color: auto` https://bugs.webkit.org/show_bug.cgi?id=257522 rdar://110012105

Reviewed by Tim Horton.

* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::FrameSelection::paintCaret):
(WebCore::CaretBase::paintCaret const):
(WebCore::DragCaretController::paintDragCaret const):
* Source/WebCore/editing/FrameSelection.h:
* Source/WebCore/platform/CaretAnimator.cpp:
(WebCore::CaretAnimator::paint const):
* Source/WebCore/platform/CaretAnimator.h:

Canonical link: https://commits.webkit.org/264818@main